# VexCTF-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  diesel.toml  package.json
.github/workflows/: greetings.yml
migrations/2020-07-17-073135_use_citext/: up.sql
migrations/2020-07-17-073139_users_table/: up.sql
migrations/2020-07-17-073715_teams_table/: up.sql
migrations/2020-07-17-074456_user_teamid/: down.sql  up.sql
migrations/2020-07-17-175159_challenges_table/: up.sql
migrations/2020-07-17-182824_categories_table/: up.sql
migrations/2020-07-17-183248_challenge_category/: down.sql  up.sql
migrations/2020-07-17-183607_team_solves/: down.sql  up.sql
spec/: Relay.gql  Root.gql  Scoreboard.gql  Session.gql
sql_testing/: full_team.sql
src/: main.rs
src/schema/: db.rs  mod.rs  users.rs
src/schema/graphql/: mod.rs  root.rs  scalars.rs
src/systems/: context.rs  crypto.rs  errors.rs  logging.rs  mod.rs  pooling.rs  session.rs  webserver.rs
