[package]
name = "vexctf"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>", "Alec Petridis <alecthechop@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
# Encoding
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
base64 = "0.12.3"
# Config
dotenv = "0.15.0"
# Database
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
# FTS for Diesel with PostgreSQL
# diesel_full_text_search = "1.0.1"
# CITEXT for Diesel with PostgreSQL
diesel-citext = "0.3.0"
# Connection Pooling
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
r2d2_redis = "0.13.0"
# Logging
log = "0.4.11"
fern = "0.6.0"
ansi_term = "0.12.1"
# Server
juniper = { version = "0.14.2" } # GraphQL
juniper_rocket = "0.5.2" # GraphQL + Rocket
rocket = "0.4.5" # Web Framework
# Types
chrono = "0.4.13"
# Sessions
frank_jwt = "3.1.2"
# Random
rand = "0.7.3"
